2008-05-26  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: j^ <j at oil21 dot org>

	* gst/qtdemux/qtdemux.c: (qtdemux_video_caps):
	Add caps for DVCPRO50 and DVCPRO HD PAL/NTSC. See #526481.

2008-05-26  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/audiofx/Makefile.am:
	* gst/audiofx/audiofx.c: (plugin_init):
	* gst/audiofx/audiovoice.c: (gst_audio_voice_base_init),
	(gst_audio_voice_class_init), (gst_audio_voice_init),
	(update_filter), (gst_audio_voice_set_property),
	(gst_audio_voice_get_property), (gst_audio_voice_setup),
	(gst_audio_voice_transform_int), (gst_audio_voice_transform_float),
	(gst_audio_voice_transform_ip):
	* gst/audiofx/audiovoice.h:
	Add simple voice removal element. Yay karaoke.

2008-05-26  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: William M. Brack <wbrack at mmm dot com dot hk>

	* sys/v4l2/v4l2src_calls.c: (gst_v4l2src_probe_caps_for_format):
	Fix potential caps leak.
	If we can't get the framerate with an ioctl, try to get it with the
	current norm. Fixes #520092.

2008-05-26  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: William M. Brack <wbrack at mmm dot com dot hk>

	* sys/v4l2/v4l2src_calls.c:
	(gst_v4l2src_probe_caps_for_format_and_size):
	If we fail to get the frame intervals, simply don't touch the framerates
	on the template caps instead of discarding the format. See #520092.

2008-05-26  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: William M. Brack <wbrack at mmm dot com dot hk>

	* sys/v4l2/gstv4l2src.c: (gst_v4l2src_v4l2fourcc_to_structure),
	(gst_v4l2_get_caps_info):
	Add NV12, NV21 and bayer support. See #520092.

2008-05-26  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/qtdemux/qtdemux.c: (gst_qtdemux_find_segment),
	(gst_qtdemux_activate_segment):
	Unbreak segment activation again. Fixes #531672.

2008-05-25  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/flac/Makefile.am:
	* ext/flac/gstflacdec.c: (gst_flac_dec_write):